--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "sugar-high": "^0.6.0",
     "tailwindcss": "4.0.0-alpha.13",
     "typescript": "5.3.3"
+  },
+  "devDependencies": {
+    "@types/google.maps": "^3.58.1",
+    "eslint": "^9.37.0"
   }
 }
